# vera-lang

./: .git-blame-ignore-revs  .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  apply_p2_refine1_def.py  llms.txt
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: release-cli.yml
_operator_archive/: README.md
bench/: README.md  REPORT.md  bucket1_baseline.py  bucket2_baseline.py  bucket2_vera.py  bucket3_baseline.py  bucket3_vera.py  bucket3_vera_violation.py  bucket4_vera.py  bucket5_vera_violation.py  bucket6_baseline.py  bucket6_vera.py  soft_smoke.ps1  test_bucket2.py  test_bucket4.py  test_bucket5.py  test_bucket6.py  vera_substrate.py
bench/logs/: mypy_clean.txt  mypy_violation_b2.txt  mypy_violation_b3.txt  mypy_violation_b4.txt  mypy_violation_b5.txt  pytest.txt
bench/vera_agent_bench_v01/: README.md
compiler/: __init__.py  __main__.py  ast_nodes.py  interpreter.py  lexer.py  parser.py  store.py  typecheck.py
crates/vera/: Cargo.toml
crates/vera/src/: ast.rs  diag.rs  interp.rs  label.rs  lexer.rs  lib.rs  main.rs  mcp.rs  parser.rs  render.rs  smt.rs  store.rs  typecheck.rs  vc.rs
docs/: GITHUB_VISIBILITY.md
docs/pilot/: CLAUDE_POINTER_GAP2_IMPLEMENT.md  CLAUDE_POINTER_GAP3_IMPLEMENT.md  (+97 more)
examples/: README.md  adt.vera  clamp.vera  lambda_list.vera  list_demo.vera  option_result.vera  propagate.vera  prove_abs.vera  prove_clamp.vera  refine_call_ok.vera  refine_rt.vera
mcp/: README.md
specs/: CLOSED.md
(+63 files in other folders)
