[package]
name = "vera"
version = "0.1.0"
edition = "2021"
description = "VERA Phase 1–2 reference front-end + interpreter + Z3 VC slice"
license = "Apache-2.0"

[[bin]]
name = "vera"
path = "src/main.rs"

[dependencies]
blake3 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
